--- a/template/market_template.html
+++ b/template/market_template.html
@@ -1,23 +1,4 @@
-<table cellpadding="0" id="table" style="text-align: center;">
-    <tr class="top" style="background-color: #CCCCCC; cursor: pointer;">
-        <td>市场</td>
-        <td>价格</td>
-        <td>涨幅</td>
-        <td>成交量</td>
-    </tr>
-    <tr>
-        <td>BTC/USDT</td>
-        <td>22977.95</td>
-        <td>0.474</td>
-        <td>6.158e+09</td>
-    </tr>
-    <tr>
-        <td>ETH/USDT</td>
-        <td>1638.95</td>
-        <td>0.29</td>
-        <td>6.043e+08</td>
-    </tr>
-</table>
+<!--my table-->'
 <script type="text/javascript">
 
     var tableSort = function () {
