--- a/pages/pages.css
+++ b/pages/pages.css
@@ -5,8 +5,8 @@ h2标题字体大小xx-large */
     text-align: center;
 }
 h1 {
-    font-size: xxx-large;
+    font-size: 100px;
 }
 h2 {
-    font-size: xx-large;
+    font-size: 80px;
 }
